public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/2746/source/compile
source.c: In function ‘main’:
source.c:9:1: error: expected ‘;’ before ‘printf’
 printf("%d \n",a);
 ^
